apps/demo-hello-spring/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hellospring
  namespace: apps
spec:
  parentRefs:
    - name: apps-gateway
      sectionName: http
  hostnames:
    - hellospring.ai47.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hellospring
          port: 80
