apps/demo-hello-spring/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellospring
  namespace: apps
  annotations:
    argocd.argoproj.io/ignore-healthcheck: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: hellospring.ai47.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hellospring
                port:
                  number: 80
